--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,17 +1,8 @@
 global:
-    scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  scrape_interval:     10s
+  evaluation_interval: 10s
 
-    external_labels:
-        monitor: 'codelab-monitor'
-
-        # A scrape configuration containing exactly one endpoint to scrape:
-        # Here it's Prometheus itself.
-    scrape_configs:
-        # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-        - job_name: 'prometheus'
-
-          # Override the global default and scrape targets from this job every 5 seconds.
-          scrape_interval: 5s
-
-          static_configs:
-              - targets: ['localhost:3000']
+scrape_configs:
+  - job_name: my_awesome_server
+    static_configs:
+      - targets: ['localhost:3000']
